--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -8,7 +8,8 @@ body {
 }
 
 #app {
-  font-family: "Microsoft YaHei", "微软雅黑", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", Arial, sans-serif;
+  font-family: "Microsoft YaHei", "微软雅黑", "Helvetica Neue", Helvetica,
+    "PingFang SC", "Hiragino Sans GB", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #333;
@@ -18,7 +19,7 @@ body {
 /* 单元格标题 */
 
 .van-cell__title {
-  flex: 5;
+  max-width: 130px !important;
 }
 
 /* 标题返回键 */
